src/test/deca/context/valid/sans_objet/no_operation.deca
// Description:
//    Programme minimaliste utilisant - avec un float.
//
// Resultats:
//      -1.4
//
// Historique:
//    cree le 04/01/2023

{

     int a = 5;
     ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
     ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
     ;;;;;;;;;;;;;;;;;;;;;;;;;;;;
     ;;;;;;;;;;;;;;;;;;;;;;;;;;;
        ;;;;;;;;;;;;;;;;;;;;;;;;;;
        ;;;;;;;;;;;;;;;;;;;;;;;;;;
        ;;;;;;;;;;;;;;;;;;;;;;;;;;
        ;;;;;;;;;;;;;;;;;;;;;;;;;;

     println(a);
}
