src/test/deca/context/invalid/arith_undef_operand.deca
// Description:
//    Operation arithmetique avec une valeur indéfinie.
//
// Resultats:
//      Ligne 11: Arithmetic operation impossible with undefined operand
//
// Historique:
//    cree le 01/01/2023

{
    int x = 4 + y;
}
